fix: image spacing

--- a/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
@@ -264,3 +264,7 @@ ul :global(.cds--list--unordered) {
 img {
   display: block;
 }
+
+span:has(:global(.gatsby-resp-image-wrapper)) {
+  display: block;
+}
